--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "html-webpack-plugin": "^5.3.2",
+    "mini-css-extract-plugin": "^2.3.0",
     "webpack": "^5.53.0",
     "webpack-cli": "^4.8.0"
   }
