--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokio = { version = "1", features = ["full"] }
-tokio-tungstenite = { version = "*", features = ["default", "native-tls"]}
-futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
+tokio = { version = "1.12.0", features = ["full"] }
+tokio-tungstenite = "0.15.0"
+futures-util = "0.3.17"
+clap = "2.33.0"
+serde_json = "1.0.68"
