--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 [dependencies]
 tokio = { version = "1.12.0", features = ["full"] }
 tokio-tungstenite = "0.15.0"
-futures-util = "0.3.17"
+futures = "0.3"
 clap = "2.33.0"
 serde_json = "1.0.68"
+uuid = { version = "0.8", features = ["serde", "v4"] }
